# jsonwhy

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-test.yml  publish.yml
src/jsonwhy/: __init__.py  __main__.py  _api.py  _diagnose.py  _errors.py  _model.py  _registry.py
tests/: test_api.py  test_cli.py  test_registry.py
