[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "jsonwhy"
version = "0.1.0"
description = "Explain exactly why and where Python objects fail JSON serialization"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Abhay" },
]
keywords = [
  "debugging",
  "diagnostics",
  "json",
  "serialization",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Debuggers",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.scripts]
jsonwhy = "jsonwhy.__main__:main"

[project.urls]
Homepage = "https://github.com/Abhay-2004/jsonwhy"
Repository = "https://github.com/Abhay-2004/jsonwhy.git"
Issues = "https://github.com/Abhay-2004/jsonwhy/issues"

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
  "hatchling>=1.27",
  "mypy>=1.15",
  "pytest>=8.3",
  "pytest-cov>=6.0",
  "ruff>=0.11",
  "twine>=6.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/jsonwhy"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/LICENSE",
  "/README.md",
]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["jsonwhy"]

[tool.coverage.report]
fail_under = 95
show_missing = true
skip_covered = true

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "N", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src"]
